# lime

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  agentui-home-send-e2e-after-fast-route-final.json  agentui-home-send-e2e-after-fast-route-initial.json  agentui-home-send-e2e-fast-route-repeat.json  console-current.txt  eslint.config.js  index.html  knowledge-ux-current-home.md  network-3030.txt  network-before.md  package-lock.json  package.json  patch_dark.js  patch_flare.js  patch_navbar.js  playwright-after-auto-restore-single-console.md  playwright-after-automation.yml  playwright-after-empty-click-console.md  playwright-after-empty-click.md  playwright-after-input.md  playwright-after-open-active.md  playwright-after-start.md  playwright-archive-expanded.md  playwright-automation-after-open.md  playwright-clean-snapshot.md  playwright-console-errors-after-reload.txt  playwright-current-after-continue.md  playwright-current-console.txt  playwright-current-lime.md  playwright-current-network.txt  playwright-current-snapshot.md  playwright-errors-after-continue.md  playwright-home-deep.md  playwright-home-snapshot.md  playwright-lime-snapshot.md  playwright-open-active-after-patch.md  playwright-open-archived-after-patch.md  (+13 more)
src-tauri/crates/aster-rust/: Cargo.toml
src-tauri/crates/aster-rust/crates/aster/: Cargo.toml  canonical_mapping_report.json
src-tauri/crates/aster-rust/crates/aster-models/: Cargo.toml
src-tauri/crates/aster-rust/crates/aster-models/src/: anthropic.rs  lib.rs  openai.rs
src-tauri/crates/aster-rust/crates/aster/examples/: agent.rs  databricks_oauth.rs  image_tool.rs  tetrate_auth.rs
src-tauri/crates/aster-rust/crates/aster/src/: action_required_manager.rs  claude_plugin_cache.rs  lib.rs  model.rs  posthog.rs  scheduler.rs  session_context.rs  tool_inspection.rs  user_message_manager.rs
src-tauri/crates/aster-rust/crates/aster/src/agents/: agent.rs  chatrecall_extension.rs  code_execution_extension.rs  execute_commands.rs  extension.rs  extension_malware_check.rs  extension_manager.rs  extension_manager_extension.rs  final_output_tool.rs  identity.rs  large_response_handler.rs  mcp_client.rs  mod.rs  platform_tools.rs  prompt_manager.rs  reply_parts.rs  retry.rs  schedule_tool.rs  skills_extension.rs  subagent_handler.rs  subagent_task_config.rs  subagent_tool.rs  tool_execution.rs  types.rs
src-tauri/crates/aster-rust/crates/aster/src/aster_apps/: mod.rs
src-tauri/crates/aster-rust/crates/aster/src/auto_reply/: config.rs  cooldown.rs  group.rs  keyword_matcher.rs  manager.rs  message.rs  mod.rs  registry.rs  schedule.rs  types.rs  webhook.rs  whitelist.rs
src-tauri/crates/aster-rust/crates/aster/src/background/: README.md  mod.rs  persistence.rs  shell_manager.rs  task_queue.rs  timeout.rs  types.rs
src-tauri/crates/aster-rust/crates/aster/src/blueprint/: README.md  acceptance_test_generator.rs  acceptance_test_runner.rs  agent_coordinator.rs  blueprint_context.rs  blueprint_manager.rs  boundary_checker.rs  codebase_analyzer.rs  mod.rs  requirement_dialog.rs  task_granularity.rs  task_tree_manager.rs  tdd_executor.rs  tests.rs  time_travel.rs  types.rs  worker_executor.rs  worker_sandbox.rs
src-tauri/crates/aster-rust/crates/aster/src/checkpoint/: README.md  diff.rs  mod.rs  session.rs  storage.rs  tests.rs  types.rs
src-tauri/crates/aster-rust/crates/aster/src/chrome/: README.md  mod.rs
src-tauri/crates/aster-rust/crates/aster/src/chrome_mcp/: README.md  mcp_server.rs  mod.rs  native_host.rs  socket_client.rs  socket_server.rs  tools.rs  types.rs
src-tauri/crates/aster-rust/crates/aster/src/codesign/: README.md  keys.rs  mod.rs  signing.rs  storage.rs  types.rs
src-tauri/crates/aster-rust/crates/aster/src/config/: README.md  agents_md_parser.rs  aster_mode.rs  base.rs  config_command.rs  config_manager.rs  extensions.rs  mod.rs  paths.rs  search_path.rs  watcher.rs
src-tauri/crates/aster-rust/crates/aster/tests/: acp_integration_test.rs  agent.rs  agents_alignment_integration_tests.rs  bash_tool_property_tests.proptest-regressions  bash_tool_property_tests.rs  common.rs  context_integration_tests.rs  file_tool_property_tests.rs  mcp_integration_test.rs  mcp_wrapper_property_tests.rs  permission_audit_property_tests.rs  permission_condition_property_tests.rs  permission_enum_compatibility_property_tests.rs  permission_import_export_property_tests.rs  permission_inheritance_property_tests.rs  permission_manager_property_tests.proptest-regressions  permission_manager_property_tests.rs  permission_merger_property_tests.rs  permission_migration_property_tests.rs  permission_persistence_property_tests.proptest-regressions  permission_persistence_property_tests.rs  permission_query_property_tests.rs  permission_restriction_property_tests.rs  permission_stats_property_tests.rs  permission_template_property_tests.proptest-regressions  permission_template_property_tests.rs  providers.rs  repetition_inspector_tests.rs  scheduler_test_support.rs  search_tool_property_tests.rs  session_id_propagation_test.rs  subagent_tool_tests.rs  task_manager_property_tests.rs  tetrate_streaming.rs  tool_inspection_manager_tests.rs  tool_registry_property_tests.rs  tool_timeout_property_tests.proptest-regressions  tool_timeout_property_tests.rs
src-tauri/crates/knowledge/: Cargo.toml
src-tauri/crates/knowledge/src/: lib.rs
src-tauri/crates/lime-cli/: Cargo.toml
src-tauri/crates/lime-cli/src/: catalog.rs  main.rs
src-tauri/crates/media-runtime/: Cargo.toml
src-tauri/crates/media-runtime/src/: lib.rs
src-tauri/crates/services/: Cargo.toml
src-tauri/crates/services/src/: ai_summary_service.rs  api_key_provider_service.rs  aster_session_store.rs  file_browser_service.rs  lib.rs  live_sync.rs  model_registry_service.rs  model_service.rs  persona_service.rs  project_context_builder.rs  provider_pool_service.rs  provider_type_mapping.rs  session_context_service.rs  skill_service.rs  update_check_service.rs  voice_asr_service.rs  voice_command_service.rs  voice_config_service.rs  voice_processor_service.rs
(+3926 files in other folders)
