[package]
name = "lime-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
