[package]
name = "lime-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lime"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
lime-media-runtime.workspace = true
lime-core.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
