[package]
name = "lime-media-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
reqwest.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
tokio.workspace = true
