[package]
name = "aster-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "aster"

[lints]
workspace = true

[features]
default = ["telemetry-posthog", "telemetry-otlp", "provider-aws"]
telemetry-posthog = ["dep:posthog-rs"]
telemetry-otlp = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry-appender-tracing",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tonic",
]
provider-aws = [
    "dep:aws-config",
    "dep:aws-smithy-types",
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-sdk-sagemakerruntime",
]

[build-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }

[dependencies]
aster-models = { path = "../aster-models", version = "0.27.2" }
lru = "0.12"
rmcp = { workspace = true, features = [
    "client",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
dirs = "5.0"
reqwest = { workspace = true, features = [
    "rustls-tls-native-roots",
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "charset",
    "http2",
    "stream",
    "blocking"
], default-features = false }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
jsonschema = "0.30.0"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.11.1"
scraper = "0.20"
async-trait = "0.1.89"
async-stream = "0.3"
minijinja = { version = "2.12.0", features = ["loader"] }
include_dir = "0.7.4"
tiktoken-rs = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"
clap = { version = "4.4", features = ["derive"] }
indoc = "2.0.5"
nanoid = "0.4"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
url = "2.5"
axum = "0.8.1"
webbrowser = {workspace = true}
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry-appender-tracing = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "http-proto", "reqwest-client"], optional = true }
tonic = { version = "0.12", optional = true }
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
serde_yaml = "0.9.34"
once_cell = "1.20.2"
parking_lot = "0.12"
hostname = "0.4"
etcetera = { workspace = true }
rand = "0.8.5"
utoipa = { version = "4.1", features = ["chrono"] }
tokio-cron-scheduler = "0.14.0"
urlencoding = "2.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }

# For Bedrock provider
aws-config = { version = "=1.8.12", features = ["behavior-version-latest"], optional = true }
aws-smithy-types = { version = "=1.3.5", optional = true }
aws-sdk-bedrockruntime = { version = "=1.120.0", optional = true }

# For SageMaker TGI provider
aws-sdk-sagemakerruntime = { version = "1.62.0", optional = true }

# For GCP Vertex AI provider auth
jsonwebtoken = "9.3.1"

blake3 = "1.5"
fs2 = "0.4.3"
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tempfile = "3.15.0"
dashmap = "6.1"
ahash = "0.8"
tokio-util = "0.7.15"
unicode-normalization = "0.1"
zip = "0.6"
sys-info = "0.9"

oauth2 = "5.0.0"
schemars = { version = "1.0.4", default-features = false, features = ["derive"] }
insta = "1.43.2"
paste = "1.0.0"
posthog-rs = { version = "0.3.7", optional = true }
shellexpand = "3.1.1"
indexmap = "2.12.0"
ignore = { workspace = true }
which = { workspace = true}
glob = "0.3"
boa_engine = "0.21.0"
boa_gc = "0.21"
unbinder = "0.1.7"
notify = "8.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincred"] }
winreg = "0.55"

[dev-dependencies]
sacp = { workspace = true }
agent-client-protocol-schema = "0.10.5"
criterion = "0.5"
serial_test = "3.2.0"
mockall = "0.13.1"
wiremock = "0.6.0"
tokio = { workspace = true }
tokio-util = { version = "0.7.15", features = ["compat"] }
temp-env = "0.3.6"
dotenvy = "0.15.7"
ctor = "0.2.9"
test-case = "3.3"
env-lock = "1.0.1"
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
proptest = "1.5"
tempfile = "3.15.0"

[[example]]
name = "agent"
path = "examples/agent.rs"

[[example]]
name = "databricks_oauth"
path = "examples/databricks_oauth.rs"

[[bin]]
name = "build_canonical_models"
path = "src/providers/canonical/build_canonical_models.rs"
